--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://localhost:3306/FitnessApp?createDatabaseIfNotExist=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.type.descriptor.sql=trace
+ 
+spring.jpa.hibernate.ddl-auto=create
