--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.type.descriptor.sql=trace
  
-spring.jpa.hibernate.ddl-auto=create
+spring.data.jpa.repositories.enabled=true
