--- a/client/app.json
+++ b/client/app.json
@@ -10,6 +10,7 @@
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+    
     },
     "assetBundlePatterns": [
       "**/*"
@@ -20,7 +21,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "permissions": [
+          "INTERNET"
+        ]
       }
     },
     "web": {
