--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.username=root
-spring.datasource.password=Alberto29
+spring.datasource.password=1234
 spring.datasource.url=jdbc:mysql://localhost:3306/FitnessApp?createDatabaseIfNotExist=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
